add environment Farmacia

--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 //app
 PORT=4000
 
-// DATABASE
+// DATABASE CEFAM
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASS=root
 DB_NAME=parcial2
 DB_DIALECT=mariadb
+
+// DATABASE FARMACIA
+
+DB_NAME_FARMACIA=farmacia
