--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.14.0",
     "i": "^0.3.7",
     "mariadb": "^3.0.0",
+    "morgan": "^1.10.0",
     "npm": "^8.7.0",
     "rut.js": "^2.1.0",
     "sequelize": "^6.19.0"
